test/2/type/poly-non-function.ploy
polyfn x;
x += 0

f = fn Int%Void;

main = f.x
